--- a/STEMInsightsApp/Views/Home/StemInsights.cshtml
+++ b/STEMInsightsApp/Views/Home/StemInsights.cshtml
@@ -9,5 +9,11 @@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script src="~/Scripts/d3.min.js"></script>
 <script src="~/Scripts/utilities.js"></script>
-<script src="~/Scripts/bubbleChart.js">
-    </script>
+<script src="~/Scripts/bubbleChart.js"> </script>
+<script src=“~/Contents/tableExport.js”></script> @*Main file which does export feature *@
+<script src=“~/Contents/jquery.base64.js”></script> @*Main file which does convert the content to base64  *@
+<script src=“~/Contents/html2canvas.js”></script> @*Main file which does export to image feature *@
+<script src=“~/Contents/jspdf/libs/base64.js”></script> @*Main file which does  convert the content to base64 for pdf *@
+<script src=“~/Contents/jspdf/libs/sprintf.js”></script> @*Main file which does export feature for pdf *@
+<script src=“~/Contents/jspdf/jspdf.js”></script> @*Main file which does export feature for pdf *@
+   
