--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -3,58 +3,173 @@
 }
 
 <body>
-    <div style="margin-top:30px; margin-left:100px; margin-bottom:50px; min-height:200px">
+    <!--MODALS-->
+    <!-- Small modal -->
+    <div class="modal fade bs-soc-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="soc-modal">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">SOC Codes (US Bureau of Labor Statistics)</h4>
+                </div>
+                <div class="row modal-row">
+                    <div class="col-sm-12">
+                        Standard Occupational Classification, US federal government job classification system.  A total of 840 occupations are recognized in the classification system.  For the WA STEM labor market analysis, a total of 811 occupations were included in the analysis (787 for King, 741 for Spokane; 741 for Vancouver, 741 for Yakima).  SOC codes were last updated in 2010.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Small modal -->
+    <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="ams-modal">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Annual Median Salary (WA State ESD MSA/MD)</h4>
+                </div>
+                <div class="row modal-row">
+                    <div class="col-sm-12">
+                        Reported median salaries of workers in the job.  The data comes from WA State Employment Security, Occupational Employment and Wage Estimates.The data encompasses the local Metropolitan Statistical Area (MSA)/MD.  See below for the geographic boundaries for the 4 regions highlighted in this report.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Small modal -->
+    <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="mhw-modal">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Median Hourly Wage (WA State ESD, MSA/MD)</h4>
+                </div>
+                <div class="row modal-row">
+                    <div class="col-sm-12">
+                        Reported/calculated median hourly wages of workers in the job. The data comes from WA State Employment Security, Occupational Employment and Wage Estimates. The data encompasses the local Metropolitan Statistical Area (MSA)/MD.  See below for the geographic boundaries for the 4 regions highlighted in this report.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Small modal -->
+    <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="eel-modal">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Entry Educational Level (US Bureau of Labor Statistics)</h4>
+                </div>
+                <div class="row modal-row">
+                    <div class="col-sm-12">
+                        Defined by the 2014 Educational and Training Assignments by US Bureau of Labor Statistics. Economists have ͞assigned occupations to categories͟ using the American Community Survey, Occupational Information Network (ONET), National Center for Education Statistics to arrive at the Entry Educational Level.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Small modal -->
+    <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="dd-modal">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Demand and Decline (WA State ESD, WDA) </h4>
+                </div>
+                <div class="row modal-row">
+                    <div class="col-sm-12">
+                        Washington State Employment Security Department produces a list of jobs (WA State and Workforce Development Area (WDA) Demand/Decline List) on a regular basis that describes which jobs are in demand (grown), not in demand (no change) and in decline.  The data is not provided in real time and lags behind by a couple of quarters.  Data for this report is from 2015. See below for the geographic boundaries for the 4 regions highlighted in this report.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Small modal -->
+    <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" id="estimated-employment-modal">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Estimated Employment Total Jobs Added Average Annual Growth Average Annual Job Openings (WA State ESD, WDA)  </h4>
+                </div>
+                <div class="row modal-row">
+                    <div class="col-sm-12">
+                        Washington State Employment Security Department produces data for each Workforce Development Area (WDA).  There are 12 WDAs in Washington.See below for the geographic boundaries for the 4 regions highlighted in this report.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div "style="margin-top:30px; margin-left:100px; margin-bottom:50px; min-height:200px">
+        
         <div id="searchInputs">
             <div id="jobCategoryDropdown" class="dropdown">
                 <text class="searchLabel">Job Category<br></text>
+                <div>
+                    <select id="categoriesUl" class="form-control">
+                        <option value="">ALL</option>
+                    </select>
+                </div>
+            </div>
+
+            <div id="titleDropdown" class="dropdown">
+                <text class="searchLabel">Job Title<br></text>
                 <div>
                     <select id="titlesUl" class="form-control">
                         <option value="">ALL</option>
                     </select>
                 </div>
-                </div>
-                <div id="titleDropdown" class="dropdown">
-                    <text class="searchLabel">Title<br></text>
-                    <div>
-                        <select id="titlesUl" class="form-control">
-                            <option value="">ALL</option>
-                        </select>
-                    </div>
-                </div>
-                <div id="levelDropdown" class="dropdown">
-                    <text class="searchLabel">Educational Level<br></text>
-                    <div>
-                        <select id="levelsUl" class="form-control">
-                            <option value="">ALL</option>
-                        </select>
-                    </div>
-                </div>
-                <div id="regionDropdown" class="dropdown">
-                    <text class="searchLabel">Region<br></text>
-                    <div>
-                        <select id="regionUl" class="form-control">
-                            <option value="WA">ALL</option>
-                            <option value="SPOK">SPOKANE</option>
-                            <option value="YAK">YAKIMA</option>
-                            <option value="VANC">VANCOUVER</option>
-                            <option value="KING">KING</option>
-                            <option value="SNO">SNOHOMISH</option>
-                        </select>
-                    </div>
-                </div>
-                <div id="search" class="dropdown">
-                    <button id="searchBtn" class="btn btn-success">Search</button>
-                    <img id="spinner" src="~/Content/images/spinner.gif" style="width:30px; height:30px" />
+            </div>
+
+            <div id="levelDropdown" class="dropdown">
+                <text class="searchLabel">Educational Level<br></text>
+                <div>
+                    <select id="levelsUl" class="form-control">
+                        <option value="">ALL</option>
+                    </select>
                 </div>
             </div>
 
+            <div id="regionDropdown" class="dropdown">
+                <text class="searchLabel">Region<br></text>
+                <div>
+                    <select id="regionUl" class="form-control">
+                        <option value="WA">ALL</option>
+                        <option value="SPOK">SPOKANE</option>
+                        <option value="YAK">YAKIMA</option>
+                        <option value="VANC">VANCOUVER</option>
+                        <option value="KING">KING</option>
+                        <option value="SNO">SNOHOMISH</option>
+                    </select>
+                </div>
+            </div>
+
+            <div id="search" class="dropdown">
+                <button id="searchBtn" class="btn btn-success">Search<br></button>
+                <img id="spinner" src="~/Content/images/spinner.gif"  style="width:30px; height:30px" />
+            </div>
+
         <div id="searchResults" class="results">        
-        </div>
+            <table>
+                <tr id=“footerExport”>
+                    <td id=“exportexcel”><img src=“~/icons/xls.png” title=“Export to Excel” /></td>
+                    <td id=“exportpdf”><img src=“~/icons/pdf.png” title=“Export to PDF” /></td>
+                    <td id=“exportimage”><img src=“~/icons/png.png” title=“Export to PNG” /></td>
+                    <td id=“exportcsv”><img src=“~/icons/csv.png” title=“Export to CSV” /></td>
+                    <td id=“exportword”><img src=“~/icons/word.png” title=“Export to Word” /></td>
+                    <td id=“exporttxt”><img src=“~/icons/txt.png” title=“Export to TXT” /></td>
+                    <td id=“exportxml”><img src=“~/icons/xml.png” title=“Export to XML” /></td>
+                    <td id=“exportppt”><img src=“~/icons/ppt.png” title=“Export to PPT” /></td>
+                </tr>
+            </table>
     </div>
 
         <script src="~/Scripts/jquery-1.10.2.min.js"></script>
         <script src="~/Scripts/utilities.js"></script>
         <script src="~/Scripts/home.js"></script>
+        <script src="~/Scripts/data_definition_modals.js"></script>
 
         <script type="text/javascript">
             $(document).ready(function () {
